--- a/hakkimda.html
+++ b/hakkimda.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Feyza - Dil ve Konuşma Terapisti Hakkında">
     <meta name="keywords" content="Feyza, dil terapisti, konuşma terapisti, hakkında">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-utilities.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hakkımda - Feyza</title>
     <style>
         header {
@@ -126,5 +127,6 @@
     </footer>
     
     <script src="script.js"></script>
+    <script src="about.js"></script>
 </body>
 </html>
