--- a/hakkimda.html
+++ b/hakkimda.html
@@ -53,7 +53,7 @@
         </aside>
 
         <section>
-            <h1>Merhaba, Ben Feyza</h1>
+            <h1 id="myName">Merhaba, Ben Feyza</h1>
             <article id="article-1" class="hakkimda-article">
                 <h2>Hakkımda</h2>
                 <p>Şu anda Ankara'da Hacettepe Üniversitesi'nde Dil ve Konuşma Terapistliği bölümünde dördüncü sınıf öğrencisiyim. 2025 yılında mezun olmayı planlıyorum. Dil ve konuşma terapisi alanında tutkulu ve kararlı bir öğrenci olarak, insanların iletişim becerilerini geliştirmelerine yardımcı olmak için sabırsızlanıyorum.</p>
