pages folder created

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Feyza - Dil ve Konuşma Terapisti. Profesyonel dil ve konuşma terapisi hizmetleri.">
     <meta name="keywords" content="dil terapisi, konuşma terapisi, dil ve konuşma bozuklukları, çocuk gelişimi">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Feyza - Dil ve Konuşma Terapisti</title>
@@ -19,7 +19,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
@@ -60,7 +60,7 @@
                     <h2>Dil ve Konuşma Terapisi Nedir?</h2>
                 </header>
                 <aside>
-                    <img src="img/Dil ve Konuşma Terapisi Nedir.png" alt="Dil ve Konuşma Terapisi" loading="lazy">
+                    <img src="../img/Dil ve Konuşma Terapisi Nedir.png" alt="Dil ve Konuşma Terapisi" loading="lazy">
                 </aside>
                 <p>Dil ve konuşma terapisi, dil ve konuşma bozukluklarına yönelik profesyonel bir tedavi ve rehabilitasyon sürecidir. Bu terapi türü, konuşma güçlükleri, ses bozuklukları, kekemelik gibi sorunlara çözüm sunar.</p>
                 <p>Terapi süreci, bireyin ihtiyaçlarına göre özelleştirilir ve aşağıdaki alanları kapsar:</p>
@@ -78,7 +78,7 @@
                     <h2>Dil ve Konuşma Terapisti Kimdir?</h2>
                 </header>
                 <aside>
-                    <img src="img/Dil ve Konuşma Terapisti Kimdir.png" alt="Dil ve Konuşma Terapisti" loading="lazy">
+                    <img src="../img/Dil ve Konuşma Terapisti Kimdir.png" alt="Dil ve Konuşma Terapisti" loading="lazy">
                 </aside>
                 <p>Dil ve konuşma terapistleri, dil ve konuşma bozukluklarını değerlendirir, tanı koyar ve tedavi eder. Bireylerin iletişim becerilerini geliştirmelerine yardımcı olur ve yaşam kalitelerini artırır.</p>
                 <p>Bir dil ve konuşma terapistinin görevleri şunları içerir:</p>
@@ -96,7 +96,7 @@
                     <h2>Çocuklarda Dil Gelişimi</h2>
                 </header>
                 <aside>
-                    <img src="img/Çocuklarda Dil Gelişimi.png" alt="Çocuklarda Dil Gelişimi" loading="lazy">
+                    <img src="../img/Çocuklarda Dil Gelişimi.png" alt="Çocuklarda Dil Gelişimi" loading="lazy">
                 </aside>
                 <p>Çocuklarda dil gelişimi, doğumdan itibaren hızla ilerler. Dil ve konuşma terapistleri, çocuklarda dil gelişimi aşamalarını takip eder, gecikmeleri değerlendirir ve gerekli müdahaleleri yapar.</p>
                 <p>Çocuklarda dil gelişiminin önemli aşamaları:</p>
@@ -165,7 +165,7 @@
             <p>&copy; 2024 Feyza. Tüm hakları saklıdır.</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
     </script>
 </body>
