img folder changed and some bugs in pages fixed

--- a/frontend/pages/iletisim.html
+++ b/frontend/pages/iletisim.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Feyza - Dil ve Konuşma Terapisti İletişim Sayfası">
     <meta name="keywords" content="iletişim, dil terapisi, konuşma terapisi, Feyza">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>İletişim - Feyza </title>
@@ -23,7 +23,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
@@ -114,8 +114,8 @@
                     </label>
                     </p>
                   
-                    <button type="submit">Gönder</button>
-                    <button type="reset">Temizle</button>
+                    <button id="sendButton" type="submit">Gönder</button>
+                    <button id="resetButton" type="reset">Temizle</button>
                 </form>
             </article>
         </section>
@@ -151,6 +151,7 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/form.js"></script>
 </body>
 </html>
