--- a/frontend/pages/hakkimda.html
+++ b/frontend/pages/hakkimda.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-utilities.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Hakkımda - Feyza</title>
+     <link rel="stylesheet" href="../css/style.css">
+     <title>Hakkımda - Feyza</title>
     <style>
         header {
             height: auto;
@@ -20,7 +20,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
@@ -126,7 +126,7 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
-    <script src="about.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/about.js"></script>
 </body>
 </html>
