--- a/frontend/pages/hizmetler.html
+++ b/frontend/pages/hizmetler.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Hizmetler - Feyza</title>
     <style>
@@ -16,7 +16,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
@@ -119,6 +119,6 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
