--- a/frontend/pages/merkezimiz.html
+++ b/frontend/pages/merkezimiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Feyza - Dil ve Konuşma Terapisti Merkezi hakkında bilgiler">
     <meta name="keywords" content="dil terapisi merkezi, konuşma terapisi merkezi, özel eğitim merkezi">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Merkezimiz - Feyza</title>
@@ -19,7 +19,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
@@ -99,6 +99,6 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
