--- a/frontend/pages/sikca-sorulan-sorular.html
+++ b/frontend/pages/sikca-sorulan-sorular.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Feyza - Dil ve Konuşma Terapisti. Sıkça sorulan sorular ve cevapları.">
     <meta name="keywords" content="dil terapisi, konuşma terapisi, sıkça sorulan sorular, SSS">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Sıkça Sorulan Sorular - Feyza</title>
@@ -19,7 +19,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img src="img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
+                <img src="../img/dktlogo.png" alt="Feyza Özel Eğitim ve Rehabilitasyon Merkezi Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Ana Sayfa</a></li>
