--- a/frontend/pages/iletisim.html
+++ b/frontend/pages/iletisim.html
@@ -152,6 +152,6 @@
     </footer>
     
     <script src="../js/script.js"></script>
-    <script src="../js/form.js"></script>
+    <script type="module" src="../js/form.js"></script>
 </body>
 </html>
